# embedded-examples

./: .gitignore  LICENSE  README.md
freeRTOS/AVR/blinky/: CMakeLists.txt  FreeRTOSConfig.h  main.c
ipc/: fork.c  mq_client.c  mq_server.c  pipe.c  semaphore.c  shm.c  signal.c  sync_problem.c
